--- a/app/sass/base/_fonts.sass
+++ b/app/sass/base/_fonts.sass
@@ -1,4 +1,6 @@
 @import mixins
 
-+font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular")
-+font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold)
++font-face("Montserrat", "../fonts/MontserratRegular/MontserratRegular")
++font-face("Montserrat", "../fonts/MontserratLight/MontserratLight", 300)
++font-face("Montserrat", "../fonts/MontserratMedium/MontserratMedium", 500)
++font-face("Montserrat", "../fonts/MontserratBold/MontserratBold", 700)
