--- a/app/sass/base/_vars.sass
+++ b/app/sass/base/_vars.sass
@@ -1,11 +1,12 @@
-$default-font: "roboto-example", sans-serif
-$accent: orange
-$text: #333
+$default-font: "Montserrat", sans-serif
+$accent-blue: #347ed6
+$accent-red: #bb0f27
+$text: #1e1e1e
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px
 $grid-columns: 12
 $grid-breakpoints: (xs: 0, sm: 480px, md: 768px, lg: 992px, xl: 1200px)
-$container-max-widths: (sm: 540px, md: 720px, lg: 960px, xl: 1170px)
+$container-max-widths: (sm: 540px, md: 720px, lg: 960px, xl: 1784px)
 
 $gutter: $grid-gutter-width
