--- a/app/sass/base/_fonts.sass
+++ b/app/sass/base/_fonts.sass
@@ -1,6 +1,9 @@
 @import mixins
 
 +font-face("Montserrat", "../fonts/MontserratRegular/MontserratRegular")
++font-face("Montserrat", "../fonts/MontserratThin/MontserratThin", 100)
++font-face("Montserrat", "../fonts/MontserratExtraLight/MontserratExtraLight", 200)
 +font-face("Montserrat", "../fonts/MontserratLight/MontserratLight", 300)
 +font-face("Montserrat", "../fonts/MontserratMedium/MontserratMedium", 500)
++font-face("Montserrat", "../fonts/MontserratSemiBold/MontserratSemiBold", 600)
 +font-face("Montserrat", "../fonts/MontserratBold/MontserratBold", 700)
