adaptation complete for sections up to .s-banner

--- a/app/sass/base/_libs.sass
+++ b/app/sass/base/_libs.sass
@@ -2,3 +2,5 @@
 @import "../libs/bootstrap/scss/bootstrap-grid"
 @import "../libs/bootstrap/scss/utilities/sizing"
 @import "../libs/owl-carousel/owl.carousel.min.css"
+@import "../libs/mmenu/mmenu.css"
+@import "../libs/css-hamburgers/hamburgers.min.css"
