section production complete

--- a/app/sass/base/_general.sass
+++ b/app/sass/base/_general.sass
@@ -53,8 +53,7 @@ a:active, a:focus
   text-decoration: none
 
 a
-  color: $accent-blue
-  text-decoration: underline
+  color: inherit
   +mt(.2s)
 
 a, li, button
