--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -8,6 +8,7 @@
 @import layout/header
 @import layout/sidebar
 @import layout/s-intro
+@import layout/s-production
 @import layout/s-banner
 @import layout/footer
 
