--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -10,6 +10,8 @@
 @import layout/s-intro
 @import layout/s-production
 @import layout/s-banner
+@import layout/s-why
+@import layout/s-about
 @import layout/footer
 
 
