--- a/app/sass/layout/_sidebar.sass
+++ b/app/sass/layout/_sidebar.sass
@@ -6,6 +6,7 @@
   padding-bottom: 35px
   border-right: 1px solid #e5e5e5
   border-bottom: 1px solid #e5e5e5
+  z-index: 100
   .logo
     display: inline-block
     margin-bottom: 7px
