--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -47,6 +47,14 @@
 
 @media (max-width: 1600px)
 
+  .footer-column
+    margin-right: 50px
+
+  .footer-mnu
+    a
+      font-size: 16px
+
+
   .about-content
     margin-left: 75px
 
@@ -96,6 +104,18 @@
     font-size: 28px
 
 @media (max-width: 1400px)
+
+
+  .main-foot
+    .contacts-block
+      font-size: 14px
+
+  .footer-column
+    max-width: 240px
+
+  .footer-mnu
+    a
+      font-size: 14px
 
   .pl-75
     padding-left: 45px
@@ -150,6 +170,9 @@
 
 // ≥1200px
 +media-breakpoint-down(lg)
+
+  .footer-content
+    justify-content: space-between
 
   #map
     position: relative
@@ -245,6 +268,23 @@
 
 // ≥992px
 +media-breakpoint-down(md)
+
+  .footer-content
+    flex-wrap: wrap
+    padding-right: 15px
+
+  .footer-column
+    max-width: inherit
+    width: 50%
+    margin-right: 0
+    margin-bottom: 30px
+    padding-right: 10px
+    &:first-child
+      order: 3
+      margin-bottom: 0
+    &:last-child
+      order: 4
+      margin-bottom: 0
 
   .s-about
     margin-bottom: 50px
@@ -374,6 +414,38 @@
 // ≥480px
 +media-breakpoint-down(xs)
 
+  .hamburger
+    .hamburger-inner, .hamburger-inner:after, .hamburger-inner:before
+      height: 3px
+      width: 30px
+
+  .hamburger--collapse .hamburger-inner:after
+    top: -16px
+
+  .hamburger--collapse .hamburger-inner:before
+    top: -8px
+
+
+  .footer-column
+    &:first-child
+      width: 100%
+      margin-bottom: 30px
+      text-align: center
+      padding-right: 0
+      .contact-item
+        justify-content: center
+        &-content
+          width: auto
+        &-icon
+          display: none
+    &:last-child
+      width: 100%
+      text-align: center
+      padding-right: 0
+      img
+        margin-left: auto
+        margin-right: auto
+
   .s-why
     text-align: center
 
@@ -436,6 +508,11 @@
       font-size: 22px
 
 @media (max-width: 390px)
+
+  .footer-column
+    width: 100%
+    text-align: center
+    padding-right: 0
 
   .about-content
     font-size: 14px
