--- a/app/sass/base/_general.sass
+++ b/app/sass/base/_general.sass
@@ -78,6 +78,8 @@ ul
   .content
     margin-left: 288px
     width: calc(100% - 288px)
+    &-main
+      min-height: calc(100vh - 333px)
 
 .btn
   display: inline-block
@@ -121,6 +123,35 @@ form
 
 .pl-75
   padding-left: 75px
+
+.pl-60
+  padding-left: 60px
+
+.breadcrumbs
+  font-size: 18px
+  font-weight: 300
+  line-height: 1.3
+  padding-top: 20px
+  padding-bottom: 28px
+  a
+    display: inline-block
+    position: relative
+    margin-right: 16px
+    &:hover
+      color: $accent-darkblue
+    &:after
+      content: ''
+      position: absolute
+      width: 1px
+      height: 18px
+      background-color: $text
+      top: calc(50% - 9px)
+      right: -10px
+    &:last-child
+      color: $accent-darkblue
+      pointer-events: none
+      &:after
+        display: none
 
 
 //preloader
