page-article.html complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -5,6 +5,9 @@
 
 @media (max-width: 1700px)
 
+  .s-article
+    padding-right: 300px
+
   .about-img
     right: -270px
 
@@ -71,6 +74,9 @@
     width: 400px
 
 @media (max-width: 1500px)
+
+  .s-article
+    padding-right: 0
 
   .blog-item
     padding: 20px
@@ -296,6 +302,11 @@
 // ≥992px
 +media-breakpoint-down(md)
 
+  .s-article
+    font-size: 16px
+    p
+      margin-bottom: 18px
+
   .footer-content
     flex-wrap: wrap
     padding-right: 15px
@@ -441,6 +452,9 @@
 // ≥480px
 +media-breakpoint-down(xs)
 
+  .s-article
+    padding-bottom: 50px
+
   .blog-item
     width: 100%
 
@@ -543,6 +557,16 @@
       font-size: 22px
 
 @media (max-width: 390px)
+
+  .s-article
+    font-size: 14px
+    p
+      margin-bottom: 12px
+
+  a.to-blog
+    display: inline-block
+    font-size: 14px
+    margin-top: 15px
 
   .footer-column
     width: 100%
