page-production.html complete

--- a/app/sass/layout/_s-production.sass
+++ b/app/sass/layout/_s-production.sass
@@ -1,6 +1,9 @@
 .s-production
   padding-top: 100px
   padding-left: 60px
+  &.p-production
+    padding-top: 0
+    padding-bottom: 70px
 
 .production-item
   overflow: hidden
@@ -32,3 +35,11 @@
     color: $accent-darkblue
     &:hover
       text-decoration: underline
+
+
+.production-desc
+  font-size: 18px
+  padding-top: 55px
+  padding-right: 350px
+  .section-title
+    margin-bottom: 10px
