--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -75,6 +75,9 @@
 
 @media (max-width: 1500px)
 
+  .production-desc
+    padding-right: 0
+
   .s-article
     padding-right: 0
 
@@ -301,6 +304,10 @@
 
 // ≥992px
 +media-breakpoint-down(md)
+
+  .production-desc
+    font-size: 16px
+    padding-top: 10px
 
   .s-article
     font-size: 16px
@@ -557,6 +564,12 @@
       font-size: 22px
 
 @media (max-width: 390px)
+
+  .s-production.p-production
+    padding-bottom: 50px
+
+  .production-desc
+    font-size: 14px
 
   .s-article
     font-size: 14px
