--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -15,6 +15,7 @@
 @import layout/s-contacts
 @import layout/s-blog
 @import layout/s-article
+@import layout/s-subproduction
 @import layout/footer
 
 
