page-payment.html complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -327,6 +327,11 @@
     font-size: 16px
     p
       margin-bottom: 18px
+    h3
+      font-size: 20px
+
+  a.link-phone
+    font-size: 18px
 
   .footer-content
     flex-wrap: wrap
@@ -472,6 +477,10 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .s-article
+    h3
+      font-size: 18px
 
   .s-subproduction
     padding-bottom: 20px
