--- a/app/sass/layout/_s-article.sass
+++ b/app/sass/layout/_s-article.sass
@@ -11,6 +11,9 @@
     text-decoration: underline
     &:hover
       text-decoration: none
+  h3
+    font-size: 24px
+    font-weight: 500
 
 a.to-blog
   font-size: 16px
@@ -18,3 +21,10 @@ a.to-blog
   text-decoration: underline
   &:hover
     text-decoration: none
+
+a.link-phone
+  font-size: 22px
+  font-weight: 500
+  color: $accent-darkblue
+  text-decoration: none
+  white-space: nowrap
