page-about.html complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -50,6 +50,9 @@
 
 @media (max-width: 1600px)
 
+  .p-about
+    padding-right: 0
+
   .footer-column
     margin-right: 50px
 
@@ -311,6 +314,9 @@
 // ≥992px
 +media-breakpoint-down(md)
 
+  .gallery-slide
+    max-width: 300px
+
   .subproduction-item
     &-img
       height: 160px
@@ -478,6 +484,11 @@
 // ≥480px
 +media-breakpoint-down(xs)
 
+  .s-gallery
+    padding-top: 70px
+    .section-title
+      margin-bottom: 25px
+
   .s-article
     h3
       font-size: 18px
@@ -604,6 +615,15 @@
       font-size: 22px
 
 @media (max-width: 390px)
+
+  .gallery-slide
+    max-width: 200px
+
+  .p-about
+    font-size: 14px
+    p
+      margin-bottom: 12px
+    padding-bottom: 20px
 
   .subproduction-item
     width: 100%
