--- a/app/sass/layout/_s-article.sass
+++ b/app/sass/layout/_s-article.sass
@@ -14,6 +14,9 @@
   h3
     font-size: 24px
     font-weight: 500
+  &.p-article
+    .section-title
+      margin-bottom: 12px
 
 a.to-blog
   font-size: 16px
