--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -16,6 +16,8 @@
 @import layout/s-blog
 @import layout/s-article
 @import layout/s-subproduction
+@import layout/p-about
+@import layout/s-gallery
 @import layout/footer
 
 
