--- a/app/sass/base/_libs.sass
+++ b/app/sass/base/_libs.sass
@@ -4,3 +4,5 @@
 @import "../libs/owl-carousel/owl.carousel.min.css"
 @import "../libs/mmenu/mmenu.css"
 @import "../libs/css-hamburgers/hamburgers.min.css"
+@import "../libs/photoswipe/photoswipe.css"
+@import "../libs/photoswipe/default-skin/default-skin.css"
