--- a/app/sass/layout/_s-why.sass
+++ b/app/sass/layout/_s-why.sass
@@ -2,6 +2,9 @@
   padding-left: 60px
   padding-top: 90px
   padding-bottom: 75px
+  &.p-why
+    padding-top: 35px
+    padding-bottom: 0
 
 .why-item
   display: inline-block
