--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -18,6 +18,7 @@
 @import layout/s-subproduction
 @import layout/p-about
 @import layout/s-gallery
+@import layout/s-news
 @import layout/footer
 
 
