--- a/app/sass/layout/_s-catalog.sass
+++ b/app/sass/layout/_s-catalog.sass
@@ -1,4 +1,5 @@
 .s-catalog
+  padding-bottom: 30px
   .section-title
     margin-bottom: 20px
 
@@ -80,6 +81,246 @@
     top: -2px
   &:first-child
     margin-left: 0
+
+.catalog-wrap
+  display: flex
+  flex-wrap: wrap
+
+.cat-item
+  width: calc(25% - 18px)
+  margin-right: 24px
+  margin-bottom: 24px
+  padding: 22px 35px
+  background-color: #fff
+  border: 1px solid #d5d5d5
+  border-radius: 5px
+  position: relative
+  +mt(.3s)
+  &:hover
+    box-shadow: 0 0 15px rgba(#000, .17)
+  &:nth-child(4n)
+    margin-right: 0
+  &-img
+    display: block
+    height: 190px
+    overflow: hidden
+    img
+      object-fit: contain
+      height: 100%
+      width: 100%
+  &-content
+    padding-top: 22px
+    font-weight: 300
+  &-title
+    color: #000
+    display: inline-block
+    &:hover
+      color: #000
+      text-decoration: underline
+  &-storage
+    font-size: 14px
+    font-weight: 300
+    color: #49ae00
+    padding-left: 20px
+    position: relative
+    margin-bottom: 20px
+    &:before
+      content: ''
+      position: absolute
+      width: 11px
+      height: 8px
+      background-image: url('../img/icons/check-icon.png')
+      +bg-cover
+      top: calc(50% - 4px)
+      left: 2px
+    &.not-available
+      color: grey
+      padding-left: 0
+      &:before
+        display: none
+  &-priceline
+    line-height: 1
+    margin-bottom: 20px
+    &>div
+      display: inline-block
+    .current
+      font-size: 20px
+      font-weight: 600
+      margin-right: 27px
+      span
+        font-size: 24px
+    .old
+      font-size: 18px
+      color: $accent-red
+      text-decoration: line-through
+  &-bottom
+    .btn
+      width: 146px
+      margin-right: 17px
+      padding-top: 9px
+      padding-bottom: 13px
+      vertical-align: top
+      .svg
+        fill: #fff
+        height: 18px
+        width: auto
+        margin-right: 14px
+        position: relative
+        top: 3px
+    .to-favorites
+      display: inline-flex
+      align-items: center
+      justify-content: center
+      border: 1px solid #d5d5d4
+      border-radius: 5px
+      width: 46px
+      height: 42px
+      .svg
+        width: 21px
+        height: auto
+        fill: #d5d5d4
+        +mt(.3s)
+      &:hover
+        .svg
+          fill: $accent-red
+  &-label
+    line-height: 1
+    font-size: 12px
+    text-align: center
+    padding: 7px
+    display: inline-block
+    margin-right: 10px
+    color: #fff
+    border-radius: 2px
+    margin-bottom: 10px
+    &.stock
+      background-color: $accent-red
+      width: 75px
+    &.hit
+      background-color: #e39c1f
+      width: 65px
+    &.new
+      background-color: #5aa526
+      width: 85px
+
+.cat-labels-wrap
+  position: absolute
+  z-index: 2
+  top: 23px
+  left: 33px
+
+
+
+
+.catlist-item
+  display: flex
+  justify-content: space-between
+  align-items: center
+  background-color: #fff
+  border: 1px solid #d5d5d4
+  border-radius: 5px
+  padding: 15px
+  margin-bottom: 15px
+  +mt(.3s)
+  &:hover
+    box-shadow: 0 0 15px rgba(#000, .17)
+  &-img
+    width: 50px
+    overflow: hidden
+    img
+      object-fit: contain
+      width: 100%
+      height: 100%
+  &-links
+    font-size: 0
+    a
+      display: inline-flex
+      width: 30px
+      height: 30px
+      align-items: center
+      justify-content: center
+      padding: 3px
+      .svg
+        width: 14px
+        height: auto
+    .btn
+      .svg
+        fill: #fff
+    .to-favorites
+      border: 1px solid #d5d5d4
+      border-radius: 5px
+      margin-left: 10px
+      .svg
+        fill: #d5d5d4
+        +mt(.3s)
+      &:hover
+        .svg
+          fill: $accent-red
+  &-priceline
+    width: 120px
+    .current
+      font-size: 18px
+      font-weight: 600
+      span
+        font-size: 20px
+    .old
+      color: $accent-red
+      text-decoration: line-through
+  &-title
+    font-size: 18px
+    font-weight: 500
+    color: #000
+    display: block
+    &:hover
+      color: #000
+      text-decoration: underline
+  &-storage
+    display: inline-block
+    font-size: 14px
+    font-weight: 300
+    color: #49ae00
+    padding-left: 20px
+    position: relative
+    margin-right: 10px
+    &:before
+      content: ''
+      position: absolute
+      width: 11px
+      height: 8px
+      background-image: url('../img/icons/check-icon.png')
+      +bg-cover
+      top: calc(50% - 4px)
+      left: 2px
+    &.not-available
+      color: grey
+      padding-left: 0
+      &:before
+        display: none
+  &-midline
+    width: calc(100% - 300px)
+    position: relative
+  .cat-labels-wrap
+    display: inline-block
+    position: relative
+    top: 0
+    left: 0
+  .cat-item-label
+    padding: 4px
+    font-size: 11px
+    margin-right: 5px
+    margin-bottom: 0
+    &.stock
+      width: 56px
+    &.hot
+      width: 46px
+    &.new
+      width: 64px
+
+
+
+
+
+
 
 
 
