--- a/app/sass/layout/_header.sass
+++ b/app/sass/layout/_header.sass
@@ -63,6 +63,8 @@
     border: 1px solid $accent-blue
     border-top-left-radius: 3px
     border-bottom-left-radius: 3px
+    border-top-right-radius: 0
+    border-bottom-right-radius: 0
     border-right: none
     &::placeholder
       color: rgba($text, .5)
