page-delivery.html complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -294,6 +294,8 @@
     position: relative
     left: -15px
     width: calc(100% + 15px)
+    &.map-isnohome
+      width: calc(100% + 30px)
 
   .pl-75
     padding-left: 15px
