--- a/app/sass/layout/_s-contacts.sass
+++ b/app/sass/layout/_s-contacts.sass
@@ -2,6 +2,8 @@
   width: 100%
   height: 520px
   background-color: #ccc
+  &.map-isnohome
+    width: calc(100% + 15px)
 
 .ymaps-2-1-75-balloon__content
   padding: 22px 17px 22px 73px!important
