page-contacts.html complete

--- a/app/sass/base/_libs.sass
+++ b/app/sass/base/_libs.sass
@@ -6,3 +6,5 @@
 @import "../libs/css-hamburgers/hamburgers.min.css"
 @import "../libs/photoswipe/photoswipe.css"
 @import "../libs/photoswipe/default-skin/default-skin.css"
+@import "../libs/form-styler/jquery.formstyler.css"
+@import "../libs/form-styler/jquery.formstyler.theme.css"
