--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -38,6 +38,12 @@
 
 @media (max-width: 1700px)
 
+  .p-contacts-form
+    padding-right: 0
+    input
+      padding-left: 10px
+      padding-right: 10px
+
   .s-article
     padding-right: 300px
 
@@ -82,6 +88,19 @@
 
 
 @media (max-width: 1600px)
+
+  .p-contacts
+    &-form
+      padding-right: 100px
+      .form-labels-wrap
+        flex-wrap: wrap
+        label, .btn
+          width: 100%
+        label
+          margin-bottom: 15px
+      .checkbox-label
+        width: 100%
+        font-size: 12px
 
   .checkout-form
     &-right
@@ -206,6 +225,9 @@
 
 @media (max-width: 1400px)
 
+  .p-contacts-form
+    padding-right: 0
+
   .subproduction-item
     width: calc(33.33333% - 16px)
     &:nth-child(3n)
@@ -300,6 +322,9 @@
     width: calc(100% + 15px)
     &.map-isnohome
       width: calc(100% + 30px)
+    &.map-ishome
+      left: 0
+      width: 100%
 
   .pl-75
     padding-left: 15px
@@ -397,6 +422,12 @@
 
 // ≥992px
 +media-breakpoint-down(md)
+
+  .p-contacts-wrap
+    &>div
+      width: calc(50% - 15px)
+    .del-item
+      width: 100%
 
   .stocks-wrap
     justify-content: space-between
@@ -678,6 +709,16 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .p-contacts
+    padding-bottom: 50px
+
+  .p-contacts-wrap
+    flex-wrap: wrap
+    &>div
+      width: 100%
+    .del-wrap
+      margin-bottom: 30px
 
   .stock-item
     width: 100%
