--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -22,6 +22,7 @@
 @import layout/s-catalog
 @import layout/s-checkout
 @import layout/s-stocks
+@import layout/p-contacts
 @import layout/footer
 
 
