page-product.html complete

--- a/app/sass/base/_general.sass
+++ b/app/sass/base/_general.sass
@@ -246,6 +246,24 @@ form
 
 
 
+.amount-wrap
+  button
+    font-size: 24px
+    line-height: 1
+    border: none
+    background-color: transparent
+    cursor: pointer
+    width: 20px
+    height: 28px
+  input
+    text-align: center
+    border: none
+    font-size: 20px
+    font-weight: 500
+    width: 40px
+
+
+
 
 
 
