--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -23,6 +23,8 @@
 @import layout/s-checkout
 @import layout/s-stocks
 @import layout/p-contacts
+@import layout/s-product
+@import layout/s-recomendations
 @import layout/footer
 
 
