--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -38,6 +38,9 @@
 
 @media (max-width: 1700px)
 
+  .product-right
+    padding-right: 0
+
   .p-contacts-form
     padding-right: 0
     input
@@ -88,6 +91,11 @@
 
 
 @media (max-width: 1600px)
+
+  .s-recomendations
+    .cat-item
+      &:nth-child(4)
+        display: none
 
   .p-contacts
     &-form
@@ -151,6 +159,27 @@
     width: 400px
 
 @media (max-width: 1500px)
+
+
+
+  .product-slider
+    width: calc(100% - 80px)
+    &-nav
+      width: 60px
+
+  .product-slide
+    height: 260px
+  .product-nav
+    height: 60px
+
+  .product
+    &-title
+      margin-top: 15px
+      font-size: 20px
+    &-right
+      padding-left: 20px
+    &-wrap
+      padding-bottom: 30px
 
   .stock-item
     &-img
@@ -224,6 +253,9 @@
     font-size: 28px
 
 @media (max-width: 1400px)
+
+  .product-desc
+    padding-right: 0
 
   .p-contacts-form
     padding-right: 0
@@ -422,6 +454,27 @@
 
 // ≥992px
 +media-breakpoint-down(md)
+
+  .s-recomendations
+    .cat-item
+      &:nth-child(4)
+        display: block
+
+  .product-right
+    width: 100%
+    padding-left: 100px
+    padding-right: 100px
+
+  .product-slider-wrap
+    width: 400px
+    margin-left: auto
+    margin-right: auto
+
+  .product
+    &-wrap
+      text-align: center
+    &-title
+      text-align: center
 
   .p-contacts-wrap
     &>div
@@ -628,6 +681,10 @@
 // ≥768px
 +media-breakpoint-down(sm)
 
+  .product-right
+    padding-left: 0
+    padding-right: 0
+
   .s-checkout
     padding-bottom: 50px
 
@@ -709,6 +766,36 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .product-desc
+    font-size: 14px
+    h3
+      font-size: 18px
+
+  .s-product
+    .section-title
+      margin-bottom: 20px
+
+  .product
+    &-wrap
+      padding-left: 20px
+      padding-right: 20px
+      text-align: left
+    &-title
+      margin-top: 0
+      font-size: 18px
+    &-storage
+      display: block!important
+    &-price
+      margin-right: 0
+    &-bottom
+      display: flex
+      align-items: center
+      justify-content: space-between
+
+  .product-slider
+    &-wrap
+      width: 100%
 
   .p-contacts
     padding-bottom: 50px
@@ -1015,6 +1102,46 @@
       font-size: 22px
 
 @media (max-width: 390px)
+
+  .product-title
+    font-size: 16px
+
+  .product-slider
+    margin-bottom: 20px
+    width: 100%
+    &-wrap
+      flex-direction: column-reverse
+    &-nav
+      width: 100%
+      display: flex
+      align-items: flex-start
+      justify-content: flex-start
+      flex-wrap: wrap
+
+  .product-nav
+    height: 45px
+
+  .product-slide
+    height: 200px
+    img
+      object-fit: cover
+
+  .product-bottom
+    flex-wrap: wrap
+    text-align: center
+    justify-content: center
+    .btn
+      width: 100%
+      margin-top: 15px
+
+  .product-midline
+    margin-bottom: 10px
+
+  .product-nav
+    width: calc(25% - 15px)
+    margin-right: 15px
+    &:nth-child(4n)
+      margin-right: 0
 
   .stock-item
     &-img
