--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -25,6 +25,7 @@
 @import layout/p-contacts
 @import layout/s-product
 @import layout/s-recomendations
+@import layout/s-cart
 @import layout/footer
 
 
